<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivMountainBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/picture_mountain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ivIconLeft"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/btn_background"
        android:scaleType="centerInside"
        android:src="@drawable/icon_arrow_left"
        app:layout_constraintStart_toStartOf="@+id/ivMountainBackground"
        app:layout_constraintTop_toTopOf="@+id/ivMountainBackground" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ivIconArchive"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/btn_background"
        android:scaleType="centerInside"
        android:src="@drawable/icon_archive"
        app:layout_constraintEnd_toEndOf="@+id/ivMountainBackground"
        app:layout_constraintTop_toTopOf="@+id/ivMountainBackground" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ivCardView"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/cardview_title_background"
        app:layout_constraintBottom_toBottomOf="@+id/ivMountainBackground"
        app:layout_constraintStart_toStartOf="@+id/ivMountainBackground">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMountainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:text="@string/mountain_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="17dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMountainTitle"
            app:srcCompat="@drawable/icon_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/location"
            android:textColor="@color/light_grey"
            android:fontFamily="@font/roboto_regular"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivLocation"
            app:layout_constraintStart_toEndOf="@+id/ivLocation"
            app:layout_constraintTop_toTopOf="@+id/ivLocation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:text="@string/price"
            android:textColor="@color/wall"
            android:fontFamily="@font/roboto_regular"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvMountainTitle"
            app:layout_constraintEnd_toEndOf="@+id/ivCardView"
            app:layout_constraintTop_toTopOf="@+id/tvMountainTitle" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar_sign"
            android:textColor="@color/light_grey"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
            app:layout_constraintEnd_toStartOf="@+id/tvPrice"
            app:layout_constraintTop_toTopOf="@+id/tvPrice" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:text="@string/tour_price"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/wall"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvLocation"
            app:layout_constraintEnd_toEndOf="@+id/ivCardView"
            app:layout_constraintTop_toTopOf="@+id/tvLocation" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/overview"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMountainBackground" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/details"
        android:textColor="@color/dark_wall"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvOverview"
        app:layout_constraintStart_toEndOf="@+id/tvOverview"
        app:layout_constraintTop_toTopOf="@+id/tvOverview" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClock"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_grey_background"
        android:scaleType="centerInside"
        android:src="@drawable/icon_clock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOverview" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/time"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/dark_wall"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivClock"
        app:layout_constraintStart_toEndOf="@+id/ivClock"
        app:layout_constraintTop_toTopOf="@+id/ivClock" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivWeather"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:background="@drawable/btn_grey_background"
        android:scaleType="centerInside"
        android:src="@drawable/icon_cloud"
        app:layout_constraintBottom_toBottomOf="@+id/ivClock"
        app:layout_constraintEnd_toStartOf="@+id/ivRating"
        app:layout_constraintStart_toEndOf="@+id/ivClock"
        app:layout_constraintTop_toTopOf="@+id/ivClock" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/temperature"
        android:textColor="@color/dark_wall"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toBottomOf="@+id/ivWeather"
        app:layout_constraintStart_toEndOf="@+id/ivWeather"
        app:layout_constraintTop_toTopOf="@+id/ivWeather" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivRating"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/btn_grey_background"
        android:scaleType="centerInside"
        android:src="@drawable/icon_star"
        app:layout_constraintBottom_toBottomOf="@+id/tvRating"
        app:layout_constraintEnd_toStartOf="@+id/tvRating"
        app:layout_constraintTop_toTopOf="@+id/tvRating" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="32dp"
        android:text="@string/rating"
        android:padding="5dp"
        android:textColor="@color/dark_wall"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvWeather"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toTopOf="@+id/tvWeather" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="30dp"
        android:layout_marginTop="34dp"
        android:textAlignment="gravity"
        android:layout_marginEnd="30dp"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivClock" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBookNow"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_book_now_background"
        android:drawableEnd="@drawable/send_icon"
        android:drawablePadding="10dp"
        android:gravity="center|end"
        android:paddingStart="100dp"
        android:paddingEnd="120dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/book_now"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>